--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&family=Roboto+Mono&display=swap');
 
 @tailwind base;
 @tailwind components;
